# django-tailwind-tutorial

./: pyproject.toml
app/: urls.py  views.py
core/: settings.py  urls.py
templates/: sample.html
