[tool.poetry]
name = "django-tailwind-tutorial"
version = "0.1.0"
description = ""
authors = ["Tatsuya Ohara <tohara.220@gmail.com>"]
readme = "README.md"
packages = [{include = "django_tailwind_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
django-tailwind = "^3.6.0"
django-browser-reload = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
